rust/parser-py/src/snapshots/parse_py_fragments@imports.py.snap
---
source: rust/parser-py/src/lib.rs
expression: resource_info
input_file: fixtures/fragments/py/imports.py

---
{
  "resource": {
    "type": "Code",
    "path": "fragments/py/imports.py",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "Python"
  },
  "relations": [
    [
      {
        "type": "Use",
        "range": [
          0,
          7,
          0,
          15
        ]
      },
      {
        "type": "Module",
        "language": "python",
        "name": "module_1"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          5,
          1,
          13
        ]
      },
      {
        "type": "Module",
        "language": "python",
        "name": "module_2"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          5,
          2,
          13
        ]
      },
      {
        "type": "Module",
        "language": "python",
        "name": "module_3"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          5,
          3,
          13
        ]
      },
      {
        "type": "Module",
        "language": "python",
        "name": "module_4"
      }
    ]
  ],
  "self_digest": "3aab782fc6a48415b9a5b4035d06e2372105e9e614ebbfcb9b884dd5de904b80"
}
