rust/parser-py/src/snapshots/parse_py_fragments@uses.py.snap
---
source: rust/parser-py/src/lib.rs
assertion_line: 223
expression: resource_info
input_file: fixtures/fragments/py/uses.py
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/py/uses.py",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "Python"
  },
  "relations": [
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          0,
          1,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var2",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          7,
          1,
          11
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var3",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          0,
          2,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "fun1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          0,
          3,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "fun2",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          5,
          3,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var4",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          11,
          3,
          15
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var5",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          4,
          0,
          4,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var6",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          4,
          5,
          4,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var7",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          6,
          3,
          6,
          7
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var8",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          6,
          10,
          6,
          14
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var9",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          7,
          13,
          7,
          18
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var10",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          11,
          14,
          11,
          19
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var11",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          12,
          4,
          12,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var12",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          16,
          5,
          16,
          10
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var13",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          21,
          0,
          21,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          22,
          0,
          22,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          23,
          0,
          23,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          23,
          13,
          23,
          18
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var15",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          27,
          0,
          27,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "fun3",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          27,
          5,
          27,
          10
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "var16",
        "kind": ""
      }
    ],
    [
      {
        "type": "Declare",
        "range": [
          31,
          4,
          31,
          8
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "fun4",
        "kind": "Function"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          38,
          0,
          38,
          6
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/py/uses.py",
        "name": "assign",
        "kind": "Integer"
      }
    ]
  ],
  "compile_digest": "10358955729016971577.10397852800639433373.0.0.0"
}
